--- a/platforms/android/assets/www/css/list.css
+++ b/platforms/android/assets/www/css/list.css
@@ -1,14 +1,27 @@
 .hide {
   display: none;
 }
-#debug {
+#debug:after {
   clear: both;
+  content: ' ';
+  visibility: hidden;
+  height: 0;
+  font-size: 0;
+  display: block;
 }
 #content {
   padding: 0;
 }
 .rec-list {
   width: 100%;
+}
+.rec-list:after {
+  clear: both;
+  content: ' ';
+  visibility: hidden;
+  height: 0;
+  font-size: 0;
+  display: block;
 }
 .rec-list li {
   float: left;
