--- a/www/less/list.less
+++ b/www/less/list.less
@@ -5,7 +5,7 @@
 }
 
 #debug {
-    clear: both;
+    .clearfix();
 }
 
 #content {
@@ -14,6 +14,7 @@
 
 .rec-list {
     width: 100%;
+    .clearfix();
 
     li {
         float: left;
