--- a/www/less/common.less
+++ b/www/less/common.less
@@ -23,7 +23,7 @@ body {
     font-size: 1em;
 }
 
-div, h1, h2, h3, h4, h5, h6, h7, em, strong, i, b {
+div, h1, h2, h3, h4, h5, h6, h7, p, em, strong, i, b {
     font-size: inherit;
     font-family: inherit;
     font-weight: normal;
