--- a/www/less/var.less
+++ b/www/less/var.less
@@ -1,13 +1,20 @@
 @default-color: #e5e5e5;
 
-@scene-color: #4FDBC2;
 @color-pink: #FFBDED;
 @color-blue: #38D7FF;
 @color-yellow: #FDFFC7;
 @color-grass: #C1F797;
+@color-purple: #AC4E83;
+
+@scene-color: #4FDBC2;
+@food-color: #FFAD26;
+@enjoy-color: @color-blue;
+@market-color: @color-grass;
+@shopping-color: @color-purple;
+@life-color: #7DD2D1;
+
 
 @color-sub: #09c;
-
 
 
 .clearfix() {
