更新首页列表
加入iscroll控制列表加载；
更新启动画面

--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -38,6 +38,7 @@ h4,
 h5,
 h6,
 h7,
+p,
 em,
 strong,
 i,
@@ -58,50 +59,35 @@ li {
 body {
   background: #160c0a;
 }
-.app {
-  display: block;
-  background: #160c0a url(../img/logo.png) no-repeat center 30px;
-  text-align: center;
-  height: 100%;
-  min-height: 420px;
-}
-.app div {
-  position: absolute;
-  width: 100%;
-  bottom: 30px;
-  color: #fff;
-  text-shadow: 0;
-}
-.app div a {
-  color: #FFF;
-}
-@keyframes fade {
-  from {
-    opacity: 1.0;
-  }
-  50% {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1.0;
-  }
-}
-@-webkit-keyframes fade {
-  from {
-    opacity: 1.0;
-  }
-  50% {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1.0;
-  }
-}
 .blink {
   animation: fade 3000ms infinite;
   -webkit-animation: fade 3000ms infinite;
 }
+.scene-bg {
+  background: #4fdbc2;
+}
+.hotel-bg {
+  background: #ffbded;
+}
+.food-bg {
+  background: #ffad26;
+}
+.enjoy-bg {
+  background: #38d7ff;
+}
+.market-bg {
+  background: #c1f797;
+}
+.shopping-bg {
+  background: #ec7ebc;
+}
+.life-bg {
+  background: #7dd2d1;
+}
 .hide {
+  display: none;
+}
+#debug {
   display: none;
 }
 #debug:after {
@@ -112,7 +98,7 @@ body {
   font-size: 0;
   display: block;
 }
-#content {
+.main {
   padding: 0;
 }
 .rec-list {
@@ -135,14 +121,16 @@ body {
   position: relative;
   display: block;
   border: 1px solid #FFF;
-  height: 4em;
-  padding: 0.1em;
+  border-left: 0;
+  border-bottom: 0;
+  height: 5em;
+  padding: .1em .3em;
   color: #000;
   text-shadow: 0 0 0;
   text-decoration: none;
 }
 .rec-list li a h3 {
-  font-size: 1.2em;
+  font-size: 1.1em;
   line-height: 1.5em;
   color: #000;
 }
@@ -153,18 +141,15 @@ body {
 }
 .rec-list li a span.level,
 .rec-list li a span.tel,
-.rec-list li a span.distance {
+.rec-list li a span.distance,
+.rec-list li a span.coupon {
   display: inline;
 }
 .rec-list li a span.distance {
-  text-align: right;
-  display: block;
-  color: #0099cc;
-  padding-right: 0.4em;
-  /*position: absolute;
-                    top: 1em;
-                    right: 1em;*/
-
+  color: #0033cc;
+  position: absolute;
+  bottom: .4em;
+  right: .4em;
 }
 .rec-list li.scene {
   background-color: #4fdbc2;
@@ -172,13 +157,37 @@ body {
 .rec-list li.hotel {
   background-color: #ffbded;
 }
-/* Adjust the width of the left reveal menu.
-Copy all CSS from jquery.mobile.panel.css and delete the properties other than width, left, right and transform.
-Then delete the selectors/rules for display modes (reveal/push/overlay) and the position (left/right) that you don't use.
-If you don't use fixed toolbars on your page you can delete those selectors as well.
-Narrow the scope of the selectors to prevent other panels being affected by the overrides. */
+.rec-list li.food {
+  background-color: #ffad26;
+}
+.rec-list li.enjoy {
+  background-color: #38d7ff;
+}
+.rec-list li.market {
+  background-color: #c1f797;
+}
+.rec-list li.shopping {
+  background-color: #ec7ebc;
+}
+.rec-list li.life {
+  background-color: #7dd2d1;
+}
+.rec-list li.no-data-block,
+.rec-list li.data-end-block {
+  background: none;
+  width: 100%;
+  text-align: center;
+  float: none;
+  color: #999;
+  font-size: 1.5em;
+  line-height: 6em;
+}
+.rec-list li.data-end-block {
+  height: 1.5em;
+  line-height: 1;
+}
 #left-panel.ui-panel {
-  width: 15em;
+  width: 8em;
 }
 #left-panel.ui-panel-closed {
   width: 0;
@@ -188,15 +197,15 @@ Narrow the scope of the selectors to prevent other panels being affected by the 
 }
 .ui-panel-content-wrap-position-left.ui-panel-content-wrap-open,
 .ui-panel-dismiss-position-left.ui-panel-dismiss-open {
-  left: 15em;
-  right: -15em;
+  left: 8em;
+  right: -8em;
 }
 .ui-panel-animate.ui-panel-content-wrap-position-left.ui-panel-content-wrap-open.ui-panel-content-wrap-display-reveal {
   left: 0;
   right: 0;
-  -webkit-transform: translate3d(15em, 0, 0);
-  -moz-transform: translate3d(15em, 0, 0);
-  transform: translate3d(15em, 0, 0);
+  -webkit-transform: translate3d(8em, 0, 0);
+  -moz-transform: translate3d(8em, 0, 0);
+  transform: translate3d(8em, 0, 0);
 }
 /* Combined listview collapsible menu. */
 /* Unset negative margin bottom on the listviews. */
@@ -241,4 +250,67 @@ Narrow the scope of the selectors to prevent other panels being affected by the 
   -webkit-box-shadow: -5px 0px 5px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: -5px 0px 5px rgba(0, 0, 0, 0.15);
   box-shadow: -5px 0px 5px rgba(0, 0, 0, 0.15);
+}
+#main {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+}
+#pull-down,
+#pull-up {
+  background: #fff;
+  height: 3em;
+  line-height: 3em;
+  padding: 5px 10px;
+  border-bottom: 1px solid #ccc;
+  font-weight: bold;
+  font-size: 1.5em;
+  color: #888;
+}
+#pull-up .pull-up-icon,
+#pull-down .pull-down-icon {
+  display: block;
+  float: left;
+  width: 40px;
+  height: 40px;
+  margin-top: 0.8em;
+  background: url(../img/pull-icon@2x.png) 0 0 no-repeat;
+  -webkit-background-size: 40px 80px;
+  background-size: 40px 80px;
+  -webkit-transition-property: -webkit-transform;
+  -webkit-transition-duration: 250ms;
+}
+#pull-down .pull-down-icon {
+  -webkit-transform: rotate(0deg) translateZ(0);
+}
+#pull-up .pull-up-icon {
+  -webkit-transform: rotate(-180deg) translateZ(0);
+}
+#pull-down.flip .pull-down-icon {
+  -webkit-transform: rotate(-180deg) translateZ(0);
+}
+#pull-up.flip .pull-up-icon {
+  -webkit-transform: rotate(0deg) translateZ(0);
+}
+#pull-down.loading .pull-down-icon,
+#pull-up.loading .pull-up-icon {
+  background-position: 0 100%;
+  -webkit-transform: rotate(0deg) translateZ(0);
+  -webkit-transition-duration: 0ms;
+  -webkit-animation-name: loading;
+  -webkit-animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+}
+@-webkit-keyframes loading {
+  from {
+    -webkit-transform: rotate(0deg) translateZ(0);
+  }
+  to {
+    -webkit-transform: rotate(360deg) translateZ(0);
+  }
+}
+#detail .ui-footer p {
+  padding: 0.2em 1em;
+  text-align: right;
 }
