--- a/www/less/list.less
+++ b/www/less/list.less
@@ -9,7 +9,7 @@
     .clearfix();
 }
 
-#content {
+.main {
     padding: 0;
 }
 
@@ -26,14 +26,16 @@
             position: relative;
             display: block;
             border: 1px solid #FFF;
-            height: 4em;
-            padding: 0.1em;
+            border-left: 0;
+            border-bottom: 0;
+            height: 5em;
+            padding: .1em .3em;
             color: #000;
             text-shadow: 0 0 0;
             text-decoration: none;
             
             h3 {
-                font-size: 1.2em;
+                font-size: 1.1em;
                 line-height: 1.5em;
                 color: #000;
             }
