--- a/www/less/var.less
+++ b/www/less/var.less
@@ -4,7 +4,7 @@
 @color-blue: #38D7FF;
 @color-yellow: #FDFFC7;
 @color-grass: #C1F797;
-@color-purple: #AC4E83;
+@color-purple: #EC7EBC;
 
 @scene-color: #4FDBC2;
 @food-color: #FFAD26;
@@ -14,7 +14,7 @@
 @life-color: #7DD2D1;
 
 
-@color-sub: #09c;
+@color-sub: #03c;
 
 
 .clearfix() {
