--- a/platforms/android/assets/www/less/side.less
+++ b/platforms/android/assets/www/less/side.less
@@ -1,10 +1,7 @@
-/* Adjust the width of the left reveal menu.
-Copy all CSS from jquery.mobile.panel.css and delete the properties other than width, left, right and transform.
-Then delete the selectors/rules for display modes (reveal/push/overlay) and the position (left/right) that you don't use.
-If you don't use fixed toolbars on your page you can delete those selectors as well.
-Narrow the scope of the selectors to prevent other panels being affected by the overrides. */
+@panel-width: 8em;
+
 #left-panel.ui-panel {
-    width: 15em;
+    width: @panel-width;
 }
 #left-panel.ui-panel-closed {
     width: 0;
@@ -14,15 +11,15 @@ Narrow the scope of the selectors to prevent other panels being affected by the 
 }
 .ui-panel-content-wrap-position-left.ui-panel-content-wrap-open,
 .ui-panel-dismiss-position-left.ui-panel-dismiss-open {
-    left: 15em;
-    right: -15em;
+    left: @panel-width;
+    right: -@panel-width;
 }
 .ui-panel-animate.ui-panel-content-wrap-position-left.ui-panel-content-wrap-open.ui-panel-content-wrap-display-reveal {
     left: 0;
     right: 0;
-    -webkit-transform: translate3d(15em,0,0);
-    -moz-transform: translate3d(15em,0,0);
-    transform: translate3d(15em,0,0);
+    -webkit-transform: translate3d(@panel-width,0,0);
+    -moz-transform: translate3d(@panel-width,0,0);
+    transform: translate3d(@panel-width,0,0);
 }
 
 /* Combined listview collapsible menu. */
