--- a/platforms/android/assets/www/less/index.less
+++ b/platforms/android/assets/www/less/index.less
@@ -35,6 +35,10 @@ body {
     background: @life-color;
 }
 
+.groupon-bg {
+    background: @groupon-color;
+}
+
 @import 'list';
 @import 'scroll';
 
