--- a/platforms/android/assets/www/less/scroll.less
+++ b/platforms/android/assets/www/less/scroll.less
@@ -2,6 +2,14 @@
     position: absolute; 
     z-index: 1;
     width: 100%;
+    bottom: 0;
+    width: 100%;
+
+    #scroller {
+        position: absolute; 
+        z-index: 1;
+        width: 100%;
+    }
 }
 
 #pull-down, #pull-up {
