--- a/www/less/detail.less
+++ b/www/less/detail.less
@@ -3,4 +3,31 @@
         padding: 0.2em 1em;
         text-align: right;
     }
+
+    #detail-content {
+        color: #8B0506;
+        /*background-color: #E4E4E4;
+        background-image: linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+        background-image: -webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+        background-image: -ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+        background-image: -webkit-gradient(
+            linear,
+            left top,
+            left bottom,
+            color-stop(0, #A7A7A7),
+            color-stop(0.51, #E4E4E4)
+        );*/
+    }
+
+    .place-detail {
+        li {
+            line-height: 2em;
+        }
+    }
+
+    .detail-name {
+        font-size: 2em;
+        line-height: 3em;
+    }
 }
+
