--- a/www/less/list.less
+++ b/www/less/list.less
@@ -62,7 +62,11 @@
         }
 
         &.hotel {
-            background-color: @color-pink;
+            background-color: @hotel-color;
+        }
+
+        &.groupon {
+            background-color: @groupon-color;
         }
 
         &.food {
