--- a/www/less/var.less
+++ b/www/less/var.less
@@ -12,9 +12,10 @@
 @market-color: @color-grass;
 @shopping-color: @color-purple;
 @life-color: #7DD2D1;
+@hotel-color: @color-pink;
+@groupon-color: #F9C6D5;
 
-
-@color-sub: #03c;
+@color-sub: #06c;
 
 
 .clearfix() {
