一些问题调整
现在还有问题就是页面切换的时候闪的太厉害了。还得修正

--- a/platforms/android/assets/www/less/index.less
+++ b/platforms/android/assets/www/less/index.less
@@ -39,6 +39,16 @@ body {
     background: @groupon-color;
 }
 
+.no-data-block {
+    background: none;
+    width: 100%;
+    text-align: center;
+    float: none;
+    color: #999;
+    font-size: 1.5em;
+    line-height: 6em;
+}
+
 @import 'list';
 @import 'scroll';
 
