--- a/www/css/index.css
+++ b/www/css/index.css
@@ -47,6 +47,9 @@ li {
 body {
   background: #160c0a;
 }
+#index-header {
+  z-index: 100;
+}
 .blink {
   animation: fade 3000ms infinite;
   -webkit-animation: fade 3000ms infinite;
@@ -75,6 +78,15 @@ body {
 .groupon-bg {
   background: #f9c6d5;
 }
+.no-data-block {
+  background: none;
+  width: 100%;
+  text-align: center;
+  float: none;
+  color: #999;
+  font-size: 1.5em;
+  line-height: 6em;
+}
 .hide {
   display: none;
 }
@@ -91,6 +103,7 @@ body {
 }
 .main {
   padding: 0;
+  height: 100%;
 }
 .rec-list {
   width: 100%;
@@ -273,7 +286,7 @@ body {
   float: left;
   width: 40px;
   height: 40px;
-  margin-top: 0.8em;
+  margin-top: 0.7em;
   background: url(../img/pull-icon@2x.png) 0 0 no-repeat;
   -webkit-background-size: 40px 80px;
   background-size: 40px 80px;
