发布之前去掉浏览器测试语句

--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -47,6 +47,9 @@ li {
 body {
   background: #160c0a;
 }
+#index-header {
+  z-index: 100;
+}
 .blink {
   animation: fade 3000ms infinite;
   -webkit-animation: fade 3000ms infinite;
