--- a/platforms/android/assets/www/less/index.less
+++ b/platforms/android/assets/www/less/index.less
@@ -4,6 +4,10 @@ body {
     background: #160c0a;
 }
 
+#index-header {
+    z-index: 100;
+}
+
 .blink {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
